syntax = "proto3";

option csharp_namespace = "GoogleApps";

package greet;

service Greeter
{
	rpc LoadAppMetadata(HelloRequest) returns (HelloReply);
}
message HelloRequest
{
	string guid = 1;
}

message HelloReply
{
	string message = 1;
}